# RMR

./: .gitignore  HELP .txt  mapping.xopp
demoRMR-all/: CMakeLists.txt
demoRMR-all/build_sim/: CMakeCache.txt  cmake_install.cmake  delete1.txt  map_simulation.txt  printed.txt  printed1.txt  printed2.txt  printed4.txt
demoRMR-all/build_sim/QJoysticks-master/: cmake_install.cmake
demoRMR-all/build_sim/QJoysticks-master/qjoysticks_autogen/NO7FQNHNVF/: moc_SDL_Joysticks.cpp.d  moc_VirtualJoystick.cpp.d
demoRMR-all/build_sim/QJoysticks-master/qjoysticks_autogen/UVLADIE3JM/: moc_QJoysticks.cpp.d
demoRMR-all/build_sim/rmr_autogen/: mocs_compilation.cpp
demoRMR-all/build_sim/rmr_autogen/QUJJOVGMVO/: moc_mainwindow.cpp.d
demoRMR-all/demoRMR/: CMakeLists.txt  collision_detection.cpp  collision_detection.h  controller.cpp  controller.h  demoRMR.pro  hash_map.cpp  hash_map.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  map_competetion.txt  map_file3.txt  mapping.cpp  mapping.h  pathfinding.cpp  pathfinding.h  point.h  points.txt  ramp.cpp  ramp.h  wall_following.cpp  wall_following.h
demoRMR-all/demoRMR/.qtc_clangd/.cache/clangd/index/: Android_Joystick.cpp.F93472738C79CDC1.idx  Android_Joystick.h.E0C18019CB63C282.idx  CKobuki.h.628F77AC68F99319.idx  JoysticksCommon.h.AB8BA05EAA2BFD03.idx  QJoysticks.cpp.AF854EF472DA6F72.idx  QJoysticks.h.FE338D70BCA16946.idx  QPainter.C38F80957EE93BD5.idx  QScopedPointer.D51606896F2350E5.idx  SDL.h.13EAC52B37964B3C.idx  SDL_Joysticks.cpp.10B5B2ACE0ED1C70.idx  SDL_Joysticks.h.D02068B3114DEEA7.idx  SDL_assert.h.72B16582A731B4AD.idx  SDL_atomic.h.4E1C3C7C3A8686C9.idx  SDL_audio.h.E70382CFEB64C878.idx  SDL_blendmode.h.3E407364AACBC76C.idx  (+200 more)
demoRMR-all/demoRMR/maps/: flood_fill.txt  map_real.txt  map_simulation_newest.txt  real_printed.txt  sim_print.txt
demoRMR-all/robot/: CKobuki.h  controller.cpp  controller.h  robot.cpp  robot.h  robot.pro
(+1 files in other folders)
